; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/dvb-usb-v2/extr_mxl111sf.c_mxl111sf_write_reg_mask.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/dvb-usb-v2/extr_mxl111sf.c_mxl111sf_write_reg_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mxl111sf_state = type { i32 }

@.str = private unnamed_addr constant [68 x i8] c"error writing addr: 0x%02x, mask: 0x%02x, data: 0x%02x, retrying...\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mxl111sf_write_reg_mask(%struct.mxl111sf_state* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.mxl111sf_state*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.mxl111sf_state* %0, %struct.mxl111sf_state** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %10, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp ne i32 %11, 255
  br i1 %12, label %13, label %34

13:                                               ; preds = %4
  %14 = load %struct.mxl111sf_state*, %struct.mxl111sf_state** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @mxl111sf_read_reg(%struct.mxl111sf_state* %14, i32 %15, i32* %10)
  store i32 %16, i32* %9, align 4
  %17 = load i32, i32* %9, align 4
  %18 = call i64 @mxl_fail(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %13
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* %8, align 4
  %24 = call i32 @pr_err(i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str, i64 0, i64 0), i32 %21, i32 %22, i32 %23)
  br label %25

25:                                               ; preds = %20, %13
  %26 = load %struct.mxl111sf_state*, %struct.mxl111sf_state** %5, align 8
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @mxl111sf_read_reg(%struct.mxl111sf_state* %26, i32 %27, i32* %10)
  store i32 %28, i32* %9, align 4
  %29 = load i32, i32* %9, align 4
  %30 = call i64 @mxl_fail(i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %25
  br label %48

33:                                               ; preds = %25
  br label %34

34:                                               ; preds = %33, %4
  %35 = load i32, i32* %7, align 4
  %36 = xor i32 %35, -1
  %37 = load i32, i32* %10, align 4
  %38 = and i32 %37, %36
  store i32 %38, i32* %10, align 4
  %39 = load i32, i32* %8, align 4
  %40 = load i32, i32* %10, align 4
  %41 = or i32 %40, %39
  store i32 %41, i32* %10, align 4
  %42 = load %struct.mxl111sf_state*, %struct.mxl111sf_state** %5, align 8
  %43 = load i32, i32* %6, align 4
  %44 = load i32, i32* %10, align 4
  %45 = call i32 @mxl111sf_write_reg(%struct.mxl111sf_state* %42, i32 %43, i32 %44)
  store i32 %45, i32* %9, align 4
  %46 = load i32, i32* %9, align 4
  %47 = call i64 @mxl_fail(i32 %46)
  br label %48

48:                                               ; preds = %34, %32
  %49 = load i32, i32* %9, align 4
  ret i32 %49
}

declare dso_local i32 @mxl111sf_read_reg(%struct.mxl111sf_state*, i32, i32*) #1

declare dso_local i64 @mxl_fail(i32) #1

declare dso_local i32 @pr_err(i8*, i32, i32, i32) #1

declare dso_local i32 @mxl111sf_write_reg(%struct.mxl111sf_state*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
